cmake_minimum_required(VERSION 3.17)
project(CursesTutorial LANGUAGES C)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

add_executable(Exple1 src/exple01.c)
add_executable(Exple2 src/exple02.c)
add_executable(Exple3 src/exple03.c)
add_executable(Exple4 src/exple04.c)
add_executable(Exple5 src/exple05.c)
add_executable(Exple6 src/exple06.c)

target_link_libraries(Exple1 curses)
target_link_libraries(Exple2 curses)
target_link_libraries(Exple3 curses)
target_link_libraries(Exple4 curses)
target_link_libraries(Exple5 curses)
target_link_libraries(Exple6 curses)
