cmake_minimum_required(VERSION 3.17)
project(CursesTutorial LANGUAGES C)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

add_executable(Exple1 src/exple01.c)
add_executable(Exple2 src/exple02.c)
add_executable(Exple3 src/exple03.c)
add_executable(Exple4 src/exple04.c)
add_executable(Exple5 src/exple05.c)
add_executable(Exple6 src/exple06.c)
add_executable(Exple7 src/exple07.c)
add_executable(Exple8 src/exple08.c)
add_executable(Exple9 src/exple09.c)
add_executable(Exple10 src/exple10.c)
add_executable(Exple11 src/exple11.c)
add_executable(Exple12 src/exple12.c)
add_executable(Exple13 src/exple13.c)
add_executable(Exple14 src/exple14.c)

target_link_libraries(Exple1 curses)
target_link_libraries(Exple2 curses)
target_link_libraries(Exple3 curses)
target_link_libraries(Exple4 curses)
target_link_libraries(Exple5 curses)
target_link_libraries(Exple6 curses)
target_link_libraries(Exple7 curses)
target_link_libraries(Exple8 curses)
target_link_libraries(Exple9 curses)
target_link_libraries(Exple10 curses)
target_link_libraries(Exple11 curses)
target_link_libraries(Exple12 curses)
target_link_libraries(Exple13 panel curses)
target_link_libraries(Exple14 menu curses)
