cmake_minimum_required(VERSION 3.17)
project(IPCTutorial LANGUAGES C)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

add_executable(Getlimits src/getlimits.c)
add_executable(GetPID src/processid.c)
add_executable(ForkExple1 src/forkExple.c)
add_executable(ForkExple2 src/forkExple2.c)
add_executable(ChainOfProcesses src/chainOfProcesses.c)
add_executable(ShallowTree src/shallowTree.c)
add_executable(OrphanProcesses src/orphanProcesses.c)
add_executable(UseOfWait src/useOfWait.c)
add_executable(WaitPIDExple src/waitpidExple.c)
add_executable(Zombie src/zombie.c)
add_executable(UsingExecl src/usingExecl.c)
add_executable(ExecvpExple src/execvpExple.c)
add_executable(BinaryTreeOfProcess src/binarytreeOfProcesses.c)
add_executable(PipeExple src/pipeExple.c)
add_executable(PipeExple2 src/pipeExple2.c)
add_executable(PipeExple3 src/pipeExple3.c)
