cmake_minimum_required(VERSION 3.17)
project(IPCTutorial LANGUAGES C)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)

add_executable(Getlimits src/getlimits.c)
add_executable(GetPID src/processid.c)
add_executable(ForkExple1 src/forkExple.c)
add_executable(ForkExple2 src/forkExple2.c)
add_executable(ChainOfProcesses src/chainOfProcesses.c)
add_executable(ShallowTree src/shallowTree.c)
add_executable(OrphanProcesses src/orphanProcesses.c)
add_executable(UseOfWait src/useOfWait.c)
add_executable(WaitPIDExple src/waitpidExple.c)
add_executable(Zombie src/zombie.c)
add_executable(UsingExecl src/usingExecl.c)
add_executable(ExecvpExple src/execvpExple.c)
add_executable(BinaryTreeOfProcess src/binarytreeOfProcesses.c)
add_executable(PipeExple src/pipeExple.c)
add_executable(PipeExple2 src/pipeExple2.c)
add_executable(PipeExple3 src/pipeExple3.c)
add_executable(PipeExple4 src/pipeExple4.c)
add_executable(PipeExple5 src/pipeExple5.c)
add_executable(PipeSize src/pipeSize.c)
add_executable(ExpleMain src/expleMain.c)
add_executable(ExpleChild src/expleChild.c)
add_executable(Redirection src/redirect.c)
add_executable(SimpleServer src/simpleServer.c)
add_executable(SimpleClient src/simpleClient.c)
add_executable(CalcServer src/calcServer.c)
add_executable(CalcClient src/calcClient.c)
