find_package(CURL REQUIRED)
find_package(LibXml2 REQUIRED)
if(CURL_FOUND AND LibXml2_FOUND)
    add_executable(Crawler crawler.c)
    target_include_directories(Crawler PRIVATE ${CURL_INCLUDE_DIRS} ${LIBXML2_INCLUDE_DIRS})
    target_link_libraries(Crawler PRIVATE ${CURL_LIBRARIES} ${LIBXML2_LIBRARIES})
else()
    message(STATUS "CURL library not found")
endif()